/*
 * Copyright (C) 2020 bsyonline
 */
package com.rolex.alphax.behavioral.state;

/**
 * @author rolex
 * @since 2020
 */
public interface IMarioState {
    String getState();

    void getMushRoom();

    void meetMonster();
}
